added new metrics
